--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "RED DRAGON BOT",
-  "description": "𝙍𝙀𝘿╺ 𝘿𝙍𝘼𝙂𝙊𝙉 - 𝘔𝘋 | By: RED-DRAGONᵀᴹ | 𝐌𝐑: ☬𝔻𝔸ℝ𝕂༒ℕ𝕀𝕋ℝ𝕆࿐",
-  "repository": "https://github.com/prabhasha2006/Red-Dragon",
-  "logo": "https://i.ibb.co/VCtXyTK/20220730-002949.jpg",
+  "name": "𝐓𝚶𝚴𝐈𝐗 ⃝𝚩𝚯𝐓⛥",
+  "description": "𝐓𝚶𝚴𝐈𝐗 ⃝𝚩𝚯𝐓⛥",
+  "repository": "tonix ml",
+  "logo": "https://i.ibb.co/QYLp1vX/icon.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
